# feishu-chatgpt-agent-shell

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  chatgpt-project.md  compliance-and-api.md  feishu-open-platform.md  quickstart.md
scripts/: dev.sh
src/feishu_chatgpt_agent_shell/: __init__.py  artifacts.py  browser_runner.py  cli.py  config.py  lark.py  main.py  memory.py  planner.py  service.py
tests/: test_browser_runner.py  test_config.py  test_lark.py  test_memory.py  test_planner.py
